--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://semneaza.usr.ro/assets/app/img/semneaza.jpg">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.ico" rel="icon">
-    <title>USR &middot; Începe curățenia Parlamentului cu o semnătură!</title>
+    <title>USR &middot; Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</title>
     <link href="https://code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/ion-rangeslider/css/ion.rangeSlider.css" rel="stylesheet">
@@ -33,7 +33,7 @@
             </a>
           </div>
           <div class="media-body">
-            <h1>Începe curățenia Parlamentului cu o semnătură!</h1>
+            <h1>Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</h1>
           </div>
           <div class="media-right">
             <a class="btn btn-inverted" href="https://www.nicusordan.ro/doneaza/" target="_blank" onclick="ga('send', 'event', 'pagina_semnaturi', 'buton', 'doneaza')">Donează</a>
