--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Strângem semnături pentru ca Uniunea Salvați România (USR) să candideze la alegerile parlamentare din 11 decembrie 2016. Ne vei găsi pe buletinul de vot doar dacă semnezi pentru noi!">
     <meta name="author" content="USR">
-    <meta property="og:url" content="https://semneaza.usr.ro/">
-    <meta property="og:title" content="Începe curățenia Parlamentului cu o semnătură!">
+    <meta property="og:url" content="https://alegeri.usr.ro/">
+    <meta property="og:title" content="Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!">
     <meta property="og:description" content="Strângem semnături pentru ca Uniunea Salvați România (USR) să candideze la alegerile parlamentare din 11 decembrie 2016. Ne vei găsi pe buletinul de vot doar dacă semnezi pentru noi!">
-    <meta property="og:image" content="https://semneaza.usr.ro/assets/app/img/semneaza.jpg">
+    <meta property="og:image" content="https://alegeri.usr.ro/assets/app/img/alegeri.jpg">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.ico" rel="icon">
     <title>USR &middot; Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</title>
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="media media-brand">
           <div class="media-left">
-            <a href="https://semneaza.usr.ro/">
+            <a href="https://alegeri.usr.ro/">
               <img class="media-object" src="assets/app/img/logo.png" alt="USR">
             </a>
           </div>
@@ -79,28 +79,14 @@
           <div class="statistics">
             <div class="statistic statistic-primary">
               <div class="value" id="countdown-days">00</div>
-              <div class="label">Zile</div>
+              <div class="label">Reprezentanți</div>
             </div>
             <div class="statistic statistic-separator">
-              <div class="value">:</div>
+              <div class="value">/</div>
             </div>
             <div class="statistic statistic-secondary">
               <div class="value" id="countdown-hours">00</div>
-              <div class="label">Ore</div>
-            </div>
-            <div class="statistic statistic-separator">
-              <div class="value">:</div>
-            </div>
-            <div class="statistic statistic-secondary">
-              <div class="value" id="countdown-minutes">00</div>
-              <div class="label">Minute</div>
-            </div>
-            <div class="statistic statistic-separator">
-              <div class="value">:</div>
-            </div>
-            <div class="statistic statistic-secondary">
-              <div class="value" id="countdown-seconds">00</div>
-              <div class="label">Secunde</div>
+              <div class="label">Delegați</div>
             </div>
           </div>
           <div id="progres-semnaturi"></div>
@@ -185,7 +171,7 @@
       </div>
     </div>
     <div class="social-media">
-      <a class="facebook" href="https://www.facebook.com/sharer.php?u=https://semneaza.usr.ro/" target="_blank">
+      <a class="facebook" href="https://www.facebook.com/sharer.php?u=https://alegeri.usr.ro/" target="_blank">
         <img src="assets/app/img/logo-facebook-inverted.png" alt="Facebook">
         Distribuie
       </a>
