Added form help text

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                           Confirm pe propria răspundere că nu sunt membru sau rudă
                         </label>
                       </div>
+                      <p class="help-block">Paragraf cu informații despre datele cu caracter personal.</p>
                       <button type="submit" class="btn btn-default">Vreau alegeri corecte!</button>
                     </form>
                   </div>
