--- a/index.html
+++ b/index.html
@@ -237,7 +237,109 @@
                       <button type="submit" class="btn btn-default">Vreau alegeri corecte!</button>
                     </form>
                   </div>
-                  <div role="tabpanel" class="tab-pane" id="delegat">TODO: delegat</div>
+                  <div role="tabpanel" class="tab-pane" id="delegat">
+                    <form>
+                      <div class="form-group">
+                        <label>Prenume:</label>
+                        <input type="text" class="form-control" placeholder="Andrei">
+                      </div>
+                      <div class="form-group">
+                        <label>Nume de familie:</label>
+                        <input type="text" class="form-control" placeholder="Popescu">
+                      </div>
+                      <div class="form-group">
+                        <label>Email:</label>
+                        <input type="email" class="form-control" placeholder="andrei.popescu@usr.ro">
+                      </div>
+                      <div class="form-group">
+                        <label>Număr de telefon:</label>
+                        <input type="text" class="form-control" placeholder="07xx-xxx-xxx">
+                      </div>
+                      <div class="form-group">
+                        <label>CNP:</label>
+                        <input type="text" class="form-control" placeholder="SAALLZZJJNNNC">
+                      </div>
+                      <div class="row">
+                        <div class="col-xs-4">
+                          <div class="form-group">
+                            <label>Serie:</label>
+                            <input type="text" class="form-control" placeholder="XX">
+                          </div>
+                        </div>
+                        <div class="col-xs-8">
+                          <div class="form-group">
+                            <label>Număr:</label>
+                            <input type="text" class="form-control" placeholder="xxxxxx">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label>Adresa din buletin:</label>
+                        <textarea class="form-control" rows="3"></textarea>
+                      </div>
+                      <div class="form-group">
+                        <label>Județul/regiunea unde vreau să fiu repartizat:</label>
+                        <select class="form-control">
+                          <option class="hidden" selected disabled>&mdash;</option>
+                          <option value="Diaspora">Diaspora</option>
+                          <option value="Alba">Alba</option>
+                          <option value="Arad">Arad</option>
+                          <option value="Argeș">Argeș</option>
+                          <option value="Bacău">Bacău</option>
+                          <option value="Bihor">Bihor</option>
+                          <option value="Bistrița-Năsăud">Bistrița-Năsăud</option>
+                          <option value="Botoșani">Botoșani</option>
+                          <option value="Brașov">Brașov</option>
+                          <option value="Brăila">Brăila</option>
+                          <option value="București">București</option>
+                          <option value="București - Sector 1">București - Sector 1</option>
+                          <option value="București - Sector 2">București - Sector 2</option>
+                          <option value="București - Sector 3">București - Sector 3</option>
+                          <option value="București - Sector 4">București - Sector 4</option>
+                          <option value="București - Sector 5">București - Sector 5</option>
+                          <option value="București - Sector 6">București - Sector 6</option>
+                          <option value="Buzău">Buzău</option>
+                          <option value="Caraș-Severin">Caraș-Severin</option>
+                          <option value="Călărași">Călărași</option>
+                          <option value="Cluj">Cluj</option>
+                          <option value="Constanța">Constanța</option>
+                          <option value="Covasna">Covasna</option>
+                          <option value="Dâmbovița">Dâmbovița</option>
+                          <option value="Dolj">Dolj</option>
+                          <option value="Galați">Galați</option>
+                          <option value="Giurgiu">Giurgiu</option>
+                          <option value="Gorj">Gorj</option>
+                          <option value="Harghita">Harghita</option>
+                          <option value="Hunedoara">Hunedoara</option>
+                          <option value="Ialomița">Ialomița</option>
+                          <option value="Iași">Iași</option>
+                          <option value="Ilfov">Ilfov</option>
+                          <option value="Maramureș">Maramureș</option>
+                          <option value="Mehedinți">Mehedinți</option>
+                          <option value="Mureș">Mureș</option>
+                          <option value="Neamț">Neamț</option>
+                          <option value="Olt">Olt</option>
+                          <option value="Prahova">Prahova</option>
+                          <option value="Satu Mare">Satu Mare</option>
+                          <option value="Sălaj">Sălaj</option>
+                          <option value="Sibiu">Sibiu</option>
+                          <option value="Suceava">Suceava</option>
+                          <option value="Teleorman">Teleorman</option>
+                          <option value="Timiș">Timiș</option>
+                          <option value="Tulcea">Tulcea</option>
+                          <option value="Vaslui">Vaslui</option>
+                          <option value="Vâlcea">Vâlcea</option>
+                          <option value="Vrancea">Vrancea</option>
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label>Observații:</label>
+                        <textarea class="form-control" rows="3"></textarea>
+                      </div>
+                      <p class="help-block">Paragraf cu informații despre datele cu caracter personal.</p>
+                      <button type="submit" class="btn btn-default">Vreau alegeri corecte!</button>
+                    </form>
+                  </div>
                 </div>
               </div>
             </li>
