--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                       </div>
                       <div class="form-group">
                         <label>Adresa din buletin:</label>
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea class="form-control" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
                       <div class="form-group">
                         <label>Județul/regiunea unde vreau să fiu repartizat:</label>
@@ -275,7 +275,7 @@
                       </div>
                       <div class="form-group">
                         <label>Adresa din buletin:</label>
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea class="form-control" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
                       <div class="form-group">
                         <label>Județul/regiunea unde vreau să fiu repartizat:</label>
