--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                       </div>
                       <div class="checkbox">
                         <label>
-                          <input type="checkbox">
+                          <input type="checkbox" checked>
                           Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat
                         </label>
                       </div>
