Added required fields styles

--- a/index.html
+++ b/index.html
@@ -124,45 +124,45 @@
                 <div class="tab-content">
                   <div role="tabpanel" class="tab-pane active" id="reprezentat">
                     <form>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Prenume:</label>
                         <input type="text" class="form-control" placeholder="Andrei">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Nume de familie:</label>
                         <input type="text" class="form-control" placeholder="Popescu">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Email:</label>
                         <input type="email" class="form-control" placeholder="andrei.popescu@usr.ro">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Număr de telefon:</label>
                         <input type="text" class="form-control" placeholder="07xx-xxx-xxx">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>CNP:</label>
                         <input type="text" class="form-control" placeholder="SAALLZZJJNNNC">
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
-                          <div class="form-group">
+                          <div class="form-group required">
                             <label>Serie:</label>
                             <input type="text" class="form-control" placeholder="XX">
                           </div>
                         </div>
                         <div class="col-xs-8">
-                          <div class="form-group">
+                          <div class="form-group required">
                             <label>Număr:</label>
                             <input type="text" class="form-control" placeholder="xxxxxx">
                           </div>
                         </div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Adresa din buletin:</label>
                         <textarea class="form-control" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Județul/regiunea unde vreau să fiu repartizat:</label>
                         <select class="form-control">
                           <option class="hidden" selected disabled>&mdash;</option>
@@ -239,45 +239,45 @@
                   </div>
                   <div role="tabpanel" class="tab-pane" id="delegat">
                     <form>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Prenume:</label>
                         <input type="text" class="form-control" placeholder="Andrei">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Nume de familie:</label>
                         <input type="text" class="form-control" placeholder="Popescu">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Email:</label>
                         <input type="email" class="form-control" placeholder="andrei.popescu@usr.ro">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Număr de telefon:</label>
                         <input type="text" class="form-control" placeholder="07xx-xxx-xxx">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>CNP:</label>
                         <input type="text" class="form-control" placeholder="SAALLZZJJNNNC">
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
-                          <div class="form-group">
+                          <div class="form-group required">
                             <label>Serie:</label>
                             <input type="text" class="form-control" placeholder="XX">
                           </div>
                         </div>
                         <div class="col-xs-8">
-                          <div class="form-group">
+                          <div class="form-group required">
                             <label>Număr:</label>
                             <input type="text" class="form-control" placeholder="xxxxxx">
                           </div>
                         </div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Adresa din buletin:</label>
                         <textarea class="form-control" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group required">
                         <label>Județul/regiunea unde vreau să fiu repartizat:</label>
                         <select class="form-control">
                           <option class="hidden" selected disabled>&mdash;</option>
