Updated required fields styles

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                           Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat
                         </label>
                       </div>
-                      <div class="checkbox">
+                      <div class="checkbox required">
                         <label class="text-muted">
                           <input type="checkbox">
                           Confirm pe propria răspundere că nu sunt membru sau rudă
