--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </label>
                       </div>
                       <div class="checkbox required">
-                        <label class="text-muted">
+                        <label>
                           <input type="checkbox">
                           Confirm pe propria răspundere că nu sunt membru sau rudă
                         </label>
