Updated control labels

--- a/index.html
+++ b/index.html
@@ -126,45 +126,45 @@
                     <form method="post">
                       <input type="hidden" name="tip" value="reprezentant">
                       <div class="form-group required">
-                        <label for="prenume-reprezentat">Prenume:</label>
+                        <label class="control-label" for="prenume-reprezentat">Prenume:</label>
                         <input type="text" class="form-control" id="prenume-reprezentat" name="prenume" placeholder="Andrei">
                       </div>
                       <div class="form-group required">
-                        <label for="nume-reprezentant">Nume de familie:</label>
+                        <label class="control-label" for="nume-reprezentant">Nume de familie:</label>
                         <input type="text" class="form-control" id="nume-reprezentant" name="nume" placeholder="Popescu">
                       </div>
                       <div class="form-group required">
-                        <label for="email-reprezentant">Email:</label>
+                        <label class="control-label" for="email-reprezentant">Email:</label>
                         <input type="email" class="form-control" id="email-reprezentant" name="email" placeholder="andrei.popescu@usr.ro">
                       </div>
                       <div class="form-group required">
-                        <label for="telefon-reprezentant">Număr de telefon:</label>
+                        <label class="control-label" for="telefon-reprezentant">Număr de telefon:</label>
                         <input type="text" class="form-control" id="telefon-reprezentant" name="telefon" placeholder="07xx-xxx-xxx">
                       </div>
                       <div class="form-group required">
-                        <label for="cnp-reprezentant">CNP:</label>
+                        <label class="control-label" for="cnp-reprezentant">CNP:</label>
                         <input type="text" class="form-control" id="cnp-reprezentant" name="cnp" placeholder="SAALLZZJJNNNC">
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
-                            <label for="serie-reprezentant">Serie:</label>
+                            <label class="control-label" for="serie-reprezentant">Serie:</label>
                             <input type="text" class="form-control" id="serie-reprezentant" name="serie" placeholder="XX">
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
-                            <label for="numar-reprezentant">Număr:</label>
+                            <label class="control-label" for="numar-reprezentant">Număr:</label>
                             <input type="text" class="form-control" id="numar-reprezentant" name="numar" placeholder="xxxxxx">
                           </div>
                         </div>
                       </div>
                       <div class="form-group required">
-                        <label for="adresa-reprezentant">Adresa din buletin:</label>
+                        <label class="control-label" for="adresa-reprezentant">Adresa din buletin:</label>
                         <textarea class="form-control" id="adresa-reprezentant" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
                       <div class="form-group required">
-                        <label for="regiune-reprezentant">Județul/regiunea unde vreau să fiu repartizat:</label>
+                        <label class="control-label" for="regiune-reprezentant">Județul/regiunea unde vreau să fiu repartizat:</label>
                         <select class="form-control" id="regiune-reprezentant" name="regiune">
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
@@ -219,17 +219,17 @@
                         </select>
                       </div>
                       <div class="form-group">
-                        <label for="observatii-reprezentant">Observații:</label>
+                        <label class="control-label" for="observatii-reprezentant">Observații:</label>
                         <textarea class="form-control" id="observatii-reprezentant" name="observatii" rows="3"></textarea>
                       </div>
                       <div class="checkbox">
-                        <label>
+                        <label class="control-label">
                           <input type="checkbox" name="delegat" checked>
                           Dacă nu sunt atribuit ca reprezentat, sunt de acord să fiu și delegat
                         </label>
                       </div>
                       <div class="checkbox required">
-                        <label>
+                        <label class="control-label">
                           <input type="checkbox" name="confirmare">
                           Confirm pe propria răspundere că nu sunt membru sau rudă
                         </label>
@@ -242,45 +242,45 @@
                     <form method="post">
                       <input type="hidden" name="tip" value="delegat">
                       <div class="form-group required">
-                        <label for="prenume-delegat">Prenume:</label>
+                        <label class="control-label" for="prenume-delegat">Prenume:</label>
                         <input type="text" class="form-control" id="prenume-delegat" name="prenume" placeholder="Andrei">
                       </div>
                       <div class="form-group required">
-                        <label for="nume-delegat">Nume de familie:</label>
+                        <label class="control-label" for="nume-delegat">Nume de familie:</label>
                         <input type="text" class="form-control" id="nume-delegat" name="nume" placeholder="Popescu">
                       </div>
                       <div class="form-group required">
-                        <label for="email-delegat">Email:</label>
+                        <label class="control-label" for="email-delegat">Email:</label>
                         <input type="email" class="form-control" id="email-delegat" name="email" placeholder="andrei.popescu@usr.ro">
                       </div>
                       <div class="form-group required">
-                        <label for="telefon-delegat">Număr de telefon:</label>
+                        <label class="control-label" for="telefon-delegat">Număr de telefon:</label>
                         <input type="text" class="form-control" id="telefon-delegat" name="telefon" placeholder="07xx-xxx-xxx">
                       </div>
                       <div class="form-group required">
-                        <label for="cnp-delegat">CNP:</label>
+                        <label class="control-label" for="cnp-delegat">CNP:</label>
                         <input type="text" class="form-control" id="cnp-delegat" name="cnp" placeholder="SAALLZZJJNNNC">
                       </div>
                       <div class="row">
                         <div class="col-xs-4">
                           <div class="form-group required">
-                            <label for="serie-delegat">Serie:</label>
+                            <label class="control-label" for="serie-delegat">Serie:</label>
                             <input type="text" class="form-control" id="serie-delegat" name="serie" placeholder="XX">
                           </div>
                         </div>
                         <div class="col-xs-8">
                           <div class="form-group required">
-                            <label for="numar-delegat">Număr:</label>
+                            <label class="control-label" for="numar-delegat">Număr:</label>
                             <input type="text" class="form-control" id="numar-delegat" name="numar" placeholder="xxxxxx">
                           </div>
                         </div>
                       </div>
                       <div class="form-group required">
-                        <label for="adresa-delegat">Adresa din buletin:</label>
+                        <label class="control-label" for="adresa-delegat">Adresa din buletin:</label>
                         <textarea class="form-control" id="adresa-delegat" name="adresa" rows="3" placeholder="Str. Carol Davila Nr. 91, Parter, Ap. 1, Sector 5, Bucureşti"></textarea>
                       </div>
                       <div class="form-group required">
-                        <label for="regiune-delegat">Județul/regiunea unde vreau să fiu repartizat:</label>
+                        <label class="control-label" for="regiune-delegat">Județul/regiunea unde vreau să fiu repartizat:</label>
                         <select class="form-control" id="regiune-delegat" name="regiune">
                           <option class="hidden" selected disabled>&mdash;</option>
                           <option value="Diaspora">Diaspora</option>
@@ -335,7 +335,7 @@
                         </select>
                       </div>
                       <div class="form-group">
-                        <label for="observatii-delegat">Observații:</label>
+                        <label class="control-label" for="observatii-delegat">Observații:</label>
                         <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3"></textarea>
                       </div>
                       <small class="help-block">Prin completarea prezentului formular, persoana vizată își exprimă consimțământul pentru prelucrarea datelor sale cu caracter personal de către Uniunea Salvați România, în scopul desemnării de reprezentanți si delegați în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016, și pentru comunicarea acestor date cu caracter personal către birourile și oficiile electorale competente, în conformitate cu dispozițiile art. 15 alin. (5), art. 89 alin. (11) din Legea nr. 208/2015 privind alegerea Senatului și a Camerei Deputaților, și art. 5 din Decizia Biroului Electoral Central nr. 73D/21.10.2016 privind unele măsuri pentru buna organizare și desfășurare a alegerilor pentru Senat și Camera Deputaților din data de 11 decembrie 2016. Nefurnizarea datelor cu caracter personal cerute prin prezentul formular atrage imposibilitatea desemnării persoanei vizate ca reprezentant sau delegat al Uniunii Salvați România în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016. În conformitate cu dispozițiile Legii nr. 677/2001 pentru protecția persoanelor cu privire la prelucrarea datelor cu caracter personal și libera circulație a acestor date, persoana vizată își poate exercita dreptul de acces la date, dreptul de intervenție asupra datelor sau dreptul de opoziție justificată, prin transmiterea unei cereri scrise, datate și semnate către Uniunea Salvați România, la adresa de email <a href="mailto:alegeri@usr.ro">alegeri@usr.ro</a>.</small>
